--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,13 @@
 # App
-PORT=3333
+APP_PORT=3333
+
+# Database
+DB_USER=mongo
+DB_PASS=mongo
+DB_HOST=localhost
+DB_PORT=27017
+DB_NAME=mongo
 
 # Redis
-REDIS_HOST=127.0.0.1
+REDIS_URL=redis://redis
 REDIS_PORT=6379
